refactor: elimina procesos etapas y tareas